student embed ผู้เรียน

--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -1107,7 +1107,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">1.ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>
                         <iframe src="https://drive.google.com/file/d/1S3Oy2QGIGgcsujrI5ImsHZw4Bx4p3pEm/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1125,7 +1125,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">2.ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า </h5>
                         <iframe src="https://drive.google.com/file/d/1yImaan0d_TqkhK5qdvAJ-0M1XDHcvM_h/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1143,7 +1143,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">3.ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก </h5>
                         <iframe src="https://drive.google.com/file/d/1vF2maJ4g34Lv0fnlA2TJ8dRKbVl2_XZ_/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1161,7 +1161,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">4.ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI) </h5>
                         <iframe src="https://drive.google.com/file/d/1Hqaqmfiz3F0DlsN_ohc4dbOtR9vVnxF6/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1179,7 +1179,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">5.ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน </h5>
                         <iframe src="https://drive.google.com/file/d/1LlBEEC_tUIXbinCppQmrSDoLwT-urbKO/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1197,7 +1197,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">6.ให้เขียนโปรแกรมแปลงเงินจากสกุลดอลลาร์เป็นบาท โดยมีอัตราแลกเปลี่ยนเป็นค่าคงที่ </h5>
                         <iframe src="https://drive.google.com/file/d/1ZWsooFRks4_kKSS88S-jFgi9hOO66aGz/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1215,7 +1215,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">7.ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
                         <iframe src="https://drive.google.com/file/d/1NoXV2-nleUAVA6rE6PHM-MOhUZxxYsg6/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1233,7 +1233,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">8.ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
                         <iframe src="https://drive.google.com/file/d/18eGGMVm7Wpu9wuHg1hdWm6HFF2RFwPsx/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1251,7 +1251,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">9.ให้เขียนโปรแกรมคำนวณเงินเดินทางรถแท็กซี่ โดยใช้ค่าคงที่สำหรับอัตราค่าเริ่มต้น, อัตราค่าโดยสารต่อกิโลเมตร, และระยะทางเดินทาง กำหนดให้ค่าเริ่มต้นคือ 35 บาท, ค่าโดยสาร 5 บาทต่อกิโลเมตร, และระยะทางเดินทางเป็น 10 กิโลเมตร</h5>
                         <iframe src="https://drive.google.com/file/d/1AbLLlCo2VurSwSF-K5VvspaDu0wZptNj/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1269,7 +1269,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">10.ให้เขียนโปรแกรมคำนวณปริมาณออกซิเจนที่จำเป็นสำหรับการเผาผลาญพลังงานในการออกกำลังกาย</h5>
                         <iframe src="https://drive.google.com/file/d/1yueqQM2bXW5MCe9hM5leSrwAnY9LSJAy/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
