--- a/views/student/course/5_Selection_Statements-course.ejs
+++ b/views/student/course/5_Selection_Statements-course.ejs
@@ -1230,7 +1230,7 @@
                             <div class="gamecontent-W">
                                 <h5>1.ให้เขียนโปรแกรมหาจำนวนเต็มบวกและจำนวนเต็มลบ</h5>
                                 <iframe src="https://drive.google.com/file/d/1nrn_-5WGtfk3PNoXJA4LUfZeG2HRbEtb/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1249,7 +1249,7 @@
                             <div class="gamecontent-W">
                                 <h5>2. ให้เขียนโปรแกรมหาเลขมากที่สุด</h5>
                                 <iframe src="https://drive.google.com/file/d/1wBpHK8c6b9PxbfitmU8fR8tkrUaKMFJ9/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1267,7 +1267,7 @@
                             <div class="gamecontent-W">
                                 <h5>3. ให้เขียนโปรแกรมตรวจสอบและแสดงวัยตามอายุของผู้ใช้</h5>
                                 <iframe src="https://drive.google.com/file/d/16v234BWe5VpMXgtdc1evsY182bjbQgYF/preview"  width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1287,7 +1287,7 @@
                             <div class="gamecontent-W">
                                 <h5>4. ให้เขียนโปรแกรมเพื่อตรวจสอบวันในจากตัวเลขที่ป้อนเข้ามา</h5>
                                 <iframe src="https://drive.google.com/file/d/16oUJKTWjyLs_HdkjyrI7WDjYKuw5w-Re/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1309,7 +1309,7 @@
                             <div class="gamecontent-W">
                                 <h5>5. ให้เขียนโปรแกรมเพื่อตรวจสอบช่วงของตัวเลขที่ป้อนเข้ามาว่าอยู่ในช่วง 1-10, 11-20, หรือมากกว่า 20</h5>
                                 <iframe src="https://drive.google.com/file/d/1vcPaH96vfsg2b-ehvw68Op-_G1RP6o8O/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1332,7 +1332,7 @@
                             <div class="gamecontent-W">
                                 <h5>6. ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Ternary Operators (Conditional Operators)</h5>
                                 <iframe src="https://drive.google.com/file/d/1H8U39ih_yqPEwWNZpQiwmtNT2h6u0oaa/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1353,7 +1353,7 @@
                             <div class="gamecontent-W">
                                 <h5>7. ให้เขียนโปรแกรมเมนูเลือกเครื่องดื่ม</h5>
                                 <iframe src="https://drive.google.com/file/d/158maNAzMefpl-jobVrJTqY-yghaCqjrZ/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1375,7 +1375,7 @@
                             <div class="gamecontent-W">
                                 <h5>8. ให้เขียนโปรแกรมแสดงเกรด</h5>
                                 <iframe src="https://drive.google.com/file/d/1wtXDa9lFOgIP7XlRYTnBU00mivnDeIyY/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1398,7 +1398,7 @@
                             <div class="gamecontent-W">
                                 <h5>9. ให้เขียนโปรแกรมสำหรับตรวจสอบเวลา</h5>
                                 <iframe src="https://drive.google.com/file/d/1KagCeQmI838NFYYJgYrRsL8if5D9rIae/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1420,7 +1420,7 @@
                             <div class="gamecontent-W">
                                 <h5>10. ให้เขียนโปรแกรมเพื่อตรวจสอบอายุและสิทธิประโยชน์</h5>
                                 <iframe src="https://drive.google.com/file/d/1EsLVcSGnHsLAanKyRibKuMrkq14s19BQ/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
