--- a/views/student/course/6_Loop_Statements-course.ejs
+++ b/views/student/course/6_Loop_Statements-course.ejs
@@ -1111,7 +1111,7 @@
                             <div class="gamecontent-W">
                                 <h5>1. ให้เขียนโปรแกรมตารางสูตรคูณ</h5>
                                 <iframe src="https://drive.google.com/file/d/1Sny_oIr9xL6ejPt_d8WomBcL7lnJb56t/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1129,7 +1129,7 @@
                             <div class="gamecontent-W">
                                 <h5>2. ให้เขียนโปรแกรมหาเลขคู่</h5>
                                 <iframe src="https://drive.google.com/file/d/1NxReX7sQjiKnrvAF4EEoLhTWAcm3Ag5Z/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1147,7 +1147,7 @@
                             <div class="gamecontent-W">
                                 <h5>3. ให้เขียนโปรแกรมหาเลขคู่และเลขคี่</h5>
                                 <iframe src="https://drive.google.com/file/d/1r4wS1MWR6icEObZte6-AcEM3xtBwQUdi/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1165,7 +1165,7 @@
                             <div class="gamecontent-W">
                                 <h5>4. ให้เขียนโปรแกรมแสดงจำนวนตัวเลขตามที่กำหนด</h5>
                                 <iframe src="https://drive.google.com/file/d/1vscsnwdcPmw2rNeq9NC2DYtBTqmCtFG9/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1183,7 +1183,7 @@
                             <div class="gamecontent-W">
                                 <h5>5. ให้เขียนโปรแกรมหาค่าเฉลี่ย</h5>
                                 <iframe src="https://drive.google.com/file/d/13aQGqhR4Ka5FCbw3ZZqKU9W50Q7qRUpR/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1201,7 +1201,7 @@
                             <div class="gamecontent-W">
                                 <h5>6. ให้เขียนโปรแกรมสร้างเมนูเลือกแสดงข้อความ</h5>
                                 <iframe src="https://drive.google.com/file/d/1C2Lun2vTxMg-o3MCmKnuHotnP3mXoL0u/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1219,7 +1219,7 @@
                             <div class="gamecontent-W">
                                 <h5>7. ให้เขียนโปรแกรมเมนูเลือกคำนวณพื้นที่</h5>
                                 <iframe src="https://drive.google.com/file/d/1lisiPOE_jbuLhTRZQeQ7Ewld1E-PljfE/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1237,7 +1237,7 @@
                             <div class="gamecontent-W">
                                 <h5>8. ให้เขียนโปรแกรมแสดงคะแนนและเกรด</h5>
                                 <iframe src="https://drive.google.com/file/d/1ZEfW00mczvvzBoT0eM8j5LDj4GlaMQmH/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1255,7 +1255,7 @@
                             <div class="gamecontent-W">
                                 <h5>9. ให้เขียนโปรแกรมเลือกเมนูคำนวณผลบวกและผลคูณ</h5>
                                 <iframe src="https://drive.google.com/file/d/1iN3mWXoW95y5Ph20yzDhyRAeyFrlL8Rl/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1273,7 +1273,7 @@
                             <div class="gamecontent-W">
                                 <h5>10. ให้เขียนโปรแกรมคำนวณผลรวมของตัวเลขที่เป็นเลขคู่</h5>
                                 <iframe src="https://drive.google.com/file/d/1SdNnpAgdCPXN010h7kT1o37TbNsFGTFN/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
