--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -1085,7 +1085,7 @@
                     <div class="gamecontent-W">
                         <h5>1.ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>    
                         <iframe src="https://drive.google.com/file/d/1HdpXWDBMAyG0spJwPtGLvrvkL1NNJAXf/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1103,7 +1103,7 @@
                     <div class="gamecontent-W">
                         <h5>2.ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า</h5>    
                         <iframe src="https://drive.google.com/file/d/1N3zOHlnLhtzIgVdhq3zyQ2b5yy2ufdM_/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1121,7 +1121,7 @@
                     <div class="gamecontent-W">
                         <h5>3.ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก</h5>    
                         <iframe src="https://drive.google.com/file/d/1rclt2KWfTh_wlSVz5aCkdQIEVveSjzER/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1139,7 +1139,7 @@
                     <div class="gamecontent-W">
                         <h5>4.ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI)</h5>    
                         <iframe src="https://drive.google.com/file/d/1OXdpUDA4A5wK7Y6NJpGx5Amx8v-ieEeX/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1157,7 +1157,7 @@
                     <div class="gamecontent-W">
                         <h5>5.ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน</h5>    
                         <iframe src="https://drive.google.com/file/d/1NydlFWaNi6JqLbukI-2_BOpGKTuJRbVQ/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1175,7 +1175,7 @@
                     <div class="gamecontent-W">
                         <h5>6.ให้เขียนโปรแกรมแนะนำตัวเอง</h5>    
                         <iframe src="https://drive.google.com/file/d/14hJ_KnUSpBlys--trP_EkFelvtfdKiPw/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1193,7 +1193,7 @@
                     <div class="gamecontent-W">
                         <h5>7.ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ และส่วนสูง</h5>    
                         <iframe src="https://drive.google.com/file/d/1yWAHdlJa3NUEXct3LNRFjEz8XUFZIDXN/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1211,7 +1211,7 @@
                     <div class="gamecontent-W">
                         <h5>8.ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ ส่วนสูง และงานอดิเรก</h5>
                         <iframe src="https://drive.google.com/file/d/1oqMa68Cv4zJYohxVTi8_DVqaNCxBggxN/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1230,7 +1230,7 @@
                     <div class="gamecontent-W">
                         <h5>9.ให้เขียนโปรแกรมแสดงข้อมูลช่องทางติดต่อ</h5>    
                         <iframe src="https://drive.google.com/file/d/1CGfw9qkwd_HKILpMeJyDzXIKpCQZfpXC/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1248,7 +1248,7 @@
                     <div class="gamecontent-W">
                         <h5>10.ให้เขียนโปรแกรมแสดงข้อมูลการศึกษาสูงสุด</h5>   
                         <iframe src="https://drive.google.com/file/d/17ws3NNddvNo9Z_ayKAPLbMzWi6Lp44uQ/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
