--- a/views/student/course/8_Functions-course.ejs
+++ b/views/student/course/8_Functions-course.ejs
@@ -1002,7 +1002,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">1.ให้เขียนโปรแกรมคำนวณพื้นที่สี่เหลี่ยม โดยใช้ฟังก์ชันที่มีการรับและส่งค่า </h5>
                     <iframe src="https://drive.google.com/file/d/1tgJJQUChHhVUBNxhQHomawLlVOZUGy8-/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1019,7 +1019,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">2. ให้เขียนโปรแกรมแสดงข้อความทักทาย โดยใช้ฟังก์ชันที่ไม่มีการรับและส่งค่า</h5>
                     <iframe src="https://drive.google.com/file/d/1VhPG26EMO3ExTchZ423Nhd9yzYdCrxkQ/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1036,7 +1036,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">3. ให้เขียนโปรแกรมตรวจสอบตัวเลขคู่คี่ โดยใช้ฟังก์ชันที่รับค่าแต่ไม่ส่งค่า</h5>
                     <iframe src="https://drive.google.com/file/d/1pEE_RJ-ej03Fetp1HAS5yJrUpm4XLctp/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1054,7 +1054,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">4. ให้เขียนโปรแกรมหาค่าสูงสุดต่ำสุด โดยใช้ฟังก์ชันที่ไม่รับค่าแต่ส่งค่า</h5>
                     <iframe src="https://drive.google.com/file/d/1rY9V2CPruA0uqI3dN_C7V1or18sXRfEU/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1071,7 +1071,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">5. ให้เขียนโปรแกรมคำนวณค่าไฟฟ้า โดยใช้ฟังก์ชันผสมทั้ง 4 แบบ</h5>
                     <iframe src="https://drive.google.com/file/d/1CepIn_BeQtubhlEQxXtaUJKUdhWaNLoF/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1091,7 +1091,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">6. ให้เขียนโปรแกรมคำนวณภาษี โดยใช้ฟังก์ชันแบบผสม</h5>
                     <iframe src="https://drive.google.com/file/d/1wAJKqShrstgk_nCWJaOfiG3FNq1alJ9K/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1111,7 +1111,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">7. ให้เขียนโปรแกรมจัดการร้านอาหาร โดยใช้ฟังก์ชันแบบผสม</h5>
                     <iframe src="https://drive.google.com/file/d/1MeUQnssX2JxDR1TO0KowznZ-Ow-dcoql/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1128,7 +1128,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">8. ให้เขียนโปรแกรมคำนวณดัชนีมวลกาย (BMI) โดยใช้ฟังก์ชันแบบผสม</h5>
                     <iframe src="https://drive.google.com/file/d/133REIlbQ_p55lURRWSAGB6kkpE6fN9RB/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1148,7 +1148,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">9. ให้เขียนโปรแกรมคำนวณเงินเดือนพนักงาน โดยใช้ฟังก์ชันแบบผสม</h5>
                     <iframe src="https://drive.google.com/file/d/1ZNnQ_v8mYC1kEWQicN6WeHMEvdMYzymo/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
@@ -1168,7 +1168,7 @@
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">10. ให้เขียนโปรแกรมจัดการคลังสินค้า โดยใช้ฟังก์ชันแบบผสม</h5>
                     <iframe src="https://drive.google.com/file/d/1O_NXMCvesrkRH1nA6cYLveml-KothJmh/preview" width="500" height="500" allow="autoplay"></iframe>  
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                 </div>
             </div>
             <div class="game">
