--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -713,7 +713,7 @@ function countTimer() {
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="500px"></iframe>
                     </div>   
           
                     <div class="modal-footer">
