--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -521,7 +521,7 @@
                     <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -548,7 +548,7 @@
                     <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -575,7 +575,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -605,7 +605,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
@@ -632,7 +632,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
@@ -723,7 +723,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="500px"></iframe>
                     </div>   
           
                     <div class="modal-footer">
