--- a/views/student/quiz/5_Selection_Statements-quiz.ejs
+++ b/views/student/quiz/5_Selection_Statements-quiz.ejs
@@ -616,7 +616,7 @@
                     <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -644,7 +644,7 @@
                     <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
@@ -671,7 +671,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
@@ -699,7 +699,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
@@ -727,7 +727,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
@@ -820,7 +820,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="500px"></iframe>
                     </div>   
           
                     <div class="modal-footer">
