--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -60,8 +60,8 @@
               <li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff;">Home</a></li>
               <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;">Course</a></li>
               <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project</a></li>
+              <li class="nav-item "><a class="nav-link" href="/community" style="color: #ffffff;">Message</a></li>
               <li class="nav-item "><a class="nav-link" href="/index_ai" style="color: #ffffff;">Ai</a></li>
-              <li class="nav-item "><a class="nav-link" href="/community" style="color: #ffffff;">Chat</a></li>
             </ul>
             <ul class="navbar-nav mb-0 ms-auto">
               <li class="nav-item nav-link" style="color: #ffffff;" ><%= user.name %></li>
