แก้ไขลิงค์แบบทดสอบ /T

--- a/views/teacher/TeacherCourse/2_Datatype_and_Variable-course.ejs
+++ b/views/teacher/TeacherCourse/2_Datatype_and_Variable-course.ejs
@@ -1291,8 +1291,8 @@
 
         <br><br>
         
-        <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h4><u>แบบทดสอบหลังเรียน</h2></u></button>
+        <button onclick="window.location.href='/TeacherCourse-Datatype_and_Variable-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h4><u>แบบทดสอบ</h2></u></button>
         
 
         
