--- a/views/teacher/TeacherCourse/3_Input_and_Output-course.ejs
+++ b/views/teacher/TeacherCourse/3_Input_and_Output-course.ejs
@@ -1264,8 +1264,8 @@
 
 
         
-        <button onclick="window.location.href='/course-Input_and_Output-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
+        <button onclick="window.location.href='/TeacherCourse-Datatype_and_Variable-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบ</h2></u></button>
         
 
         
