--- a/views/teacher/TeacherCourse/5_Selection_Statements-course.ejs
+++ b/views/teacher/TeacherCourse/5_Selection_Statements-course.ejs
@@ -1439,8 +1439,8 @@
                         </div>
 
         
-        <button onclick="window.location.href='/course-Selection_Statements-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
+        <button onclick="window.location.href='/TeacherCourse-Selection_Statements-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบ</h2></u></button>
 
         <br></div>
     </div>
