--- a/views/teacher/TeacherCourse/6_Loop_Statements-course.ejs
+++ b/views/teacher/TeacherCourse/6_Loop_Statements-course.ejs
@@ -1289,8 +1289,8 @@
 
 
         
-        <button onclick="window.location.href='/course-Loop_Statements-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
+        <button onclick="window.location.href='/TeacherCourse-Loop_Statements-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบ</h2></u></button>
 
         
         </div>
