--- a/views/teacher/TeacherCourse/8_Functions-course.ejs
+++ b/views/teacher/TeacherCourse/8_Functions-course.ejs
@@ -1185,8 +1185,8 @@
                 </div>
             </div>
                 <br>
-                <button onclick="window.location.href='/course-Arrays_and_Strings-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-                <h4>แบบทดสอบหลังเรียน</h4></button><br><br>
+                <button onclick="window.location.href='/TeacherCourse-Arrays_and_Strings-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+                <h4>แบบทดสอบ</h4></button><br><br>
 
         </div>
     </div>
