--- a/views/teacher/TeacherCourse/4_Operators_and_Expressions-course.ejs
+++ b/views/teacher/TeacherCourse/4_Operators_and_Expressions-course.ejs
@@ -1186,8 +1186,8 @@
                 </div>
 
         
-        <button onclick="window.location.href='/course-Operators_and_Expressions-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
+        <button onclick="window.location.href='/TeacherCourse-Operators_and_Expressions-lab'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบ</h2></u></button>
         
 
         
