student project quiz embed

--- a/views/student/project/1_TicketBookingSystem.ejs
+++ b/views/student/project/1_TicketBookingSystem.ejs
@@ -84,7 +84,7 @@
                     <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
                     <a class="compiler btn" href="https://www.programiz.com/c-programming/online-compiler/" target="_blank">Click to go to Programiz</a>
                 </div>
-                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="600px" height="740px"></iframe> 
+                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="600px" height="740px"></iframe> 
             </div>
             
         </div>  
