แก้ไข text ระบบแนะนำ

--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -161,7 +161,7 @@
 
                     <% if (Object.keys(RecommendaResult).length !== 0 && RecommendaResult[0].RecommendCourse != "null" ) { %> <%# ถ้าเลือกวิธีแนะนำแล้ว %> 
                         <br>
-                        การแนะนำแบบ <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %>  <br>
+                        <!-- การแนะนำแบบ <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %>  <br> -->
                         <br>
                             
                         <% if (TicketBooking_SystemPercent === 100 && PointofSales_SystemPercent === 100 && ProjectQUIZ3Percent === 100 ) { %> <%# ถ้า Path ครบแล้ว %> 
