--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -5,7 +5,7 @@
     
             <div class="row">
                 <div class="col">
-                    <h4>การแนะนำแบบ   <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %>  </h4>
+                    <!--<h4>การแนะนำ  แบบ   <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %> --> </h4>
                 </div>
                 <div class="w-100"></div>
                 <div class="w-100"></div>
