--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -332,6 +332,7 @@
 
         <div><!-- chart -->
                 <b class="chakra-petch-regular" style="font-size: 30px;">Competency</b>  
+                (คะแนนรวมของผู้เรียนทั้งหมด) <p style="font-size: 15px; font-weight: lighter;">**หากยังตรวจข้อเขียนไม่ครบ สมรรถนะด้าน Writing จะไม่แสดงคะแนน</p>
                 <b class="chakra-petch-regular"></b>
                 <div> 
                     <div class="chartCard">
@@ -384,7 +385,7 @@
         </div>
 
         <div><!-- Project-Quiz Score -->
-                <h4 class="chakra-petch-regular">Project-Quiz</h4>  <br>
+                <h4 class="chakra-petch-regular">Project-Quiz <span style="font-size: 20px;">(คะแนนเฉลี่ยของผู้เรียนทั้งหมด)</span></h4>
                 <div style="display: flex;">
                     <div class="quiz_box">
                         <p class="score_title">Quiz 1</p>
@@ -427,7 +428,7 @@
                 </div>-->
                
                      <!-- Pre-test Score -->
-                     <h4 class="chakra-petch-regular">Score</h4>
+                     <h4 class="chakra-petch-regular">Score <span style="font-size: 15px;">(คะแนนเฉลี่ยของผู้เรียนทั้งหมด)</span></h4>
                       <div></div>
                         <div>
                             <b>Pre-test (Lab ละ 40 คะแนน)</b>
