--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -105,7 +105,7 @@
                         <span class="input-group-text"><b>ข้อ 16</b></span>
                         <div class="group2">
                             <iframe src=" <%= student[0].ADRI1 %> " width="100%" height="100%" allow="autoplay"></iframe>
-                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                            <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                         </div>
                         
                             <div class="col-sm"> 
@@ -141,7 +141,7 @@
                         <span class="input-group-text"><b>ข้อ 17</b></span>
                         <div class="group2">
                             <iframe src=" <%= student[0].ADRI2  %> " width="100%" height="100%" allow="autoplay"></iframe>
-                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                            <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                         </div>
                     
                         <div class="col-sm"> 
@@ -177,7 +177,7 @@
                     <span class="input-group-text"><b>ข้อ 18</b></span>
                     <div class="group2">
                         <iframe src=" <%= student[0].ADRI3  %> " width="100%" height="100%" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
 
                 
@@ -214,7 +214,7 @@
                 <span class="input-group-text"><b>ข้อ 19</b></span>
                 <div class="group2">
                     <iframe src=" <%= student[0].ADRI4  %> " width="100%" height="100%" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                 </div>
 
                 
@@ -251,7 +251,7 @@
                 <span class="input-group-text"><b>ข้อ 20</b></span>
                 <div class="group2">
                     <iframe src=" <%= student[0].ADRI5  %> " width="100%" height="100%" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                 </div>
                 
                     <div class="col-sm"> 
@@ -309,7 +309,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
+            <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="500px"></iframe>
         </div>   
 
         <div class="modal-footer">
