--- a/views/teacher/checkQuiz.ejs
+++ b/views/teacher/checkQuiz.ejs
@@ -121,7 +121,7 @@
                         <div class="col-sm"> 
                             <div class="card-body shadow rounded group2">
                                 <textarea style="height: 100%" class="form-control" name="code" rows="10" ><%= student[0].code%></textarea>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe> 
                             </div>
                             <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="50" step="0.5" name="studentScore2" id="studentScore" value="" placeholder="50 คะแนน">
                         </div>
@@ -182,7 +182,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
+            <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="500px"></iframe>
         </div>   
 
         <div class="modal-footer">
